# zero2prod

./: .env  Cargo.toml  Dockerfile  configuration.yaml  sqlx-data.json
configuration/: base.yaml
migrations/: 20220208093145_create_subscriptions_table.sql
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
